[gd_scene load_steps=3 format=3 uid="uid://c3gyirfund10s"]

[ext_resource type="Script" uid="uid://cftjoirlcfgqx" path="res://src/menu_network.gd" id="1_g5m8u"]
[ext_resource type="Script" uid="uid://5plxarvqpcgp" path="res://src/network_test.gd" id="2_vh1bq"]

[node name="menu_network" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_g5m8u")

[node name="button_toggle" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
text = "Network Settings"

[node name="network_test" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_vh1bq")

[node name="line_edit" type="LineEdit" parent="network_test"]
layout_mode = 0
offset_left = 40.0
offset_top = 230.0
offset_right = 296.0
offset_bottom = 283.0
text = "foo"

[node name="button_reliable" type="Button" parent="network_test"]
layout_mode = 0
offset_left = 40.0
offset_top = 327.0
offset_right = 476.0
offset_bottom = 380.0
text = "send reliable message (TCP)"

[node name="button_unreliable" type="Button" parent="network_test"]
layout_mode = 0
offset_left = 40.0
offset_top = 432.0
offset_right = 526.0
offset_bottom = 485.0
text = "send unreliable message (UDP)"

[node name="panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.125
anchor_right = 0.75
anchor_bottom = 0.875
grow_horizontal = 2
grow_vertical = 2

[node name="main" type="Control" parent="panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="label_header" type="Label" parent="panel/main"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 128.0
offset_bottom = 195.0
grow_horizontal = 2
theme_type_variation = &"Header"
text = "Network Configuration"
horizontal_alignment = 1

[node name="v_box_container" type="VBoxContainer" parent="panel/main"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="button_host" type="Button" parent="panel/main/v_box_container"]
layout_mode = 2
text = "Host Server"

[node name="button_join" type="Button" parent="panel/main/v_box_container"]
layout_mode = 2
text = "Join Server"

[node name="host" type="Control" parent="panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="label_header" type="Label" parent="panel/host"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 128.0
offset_bottom = 195.0
grow_horizontal = 2
theme_type_variation = &"Header"
text = "Network Configuration
- Host Server -"
horizontal_alignment = 1

[node name="v_box_container" type="VBoxContainer" parent="panel/host"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="port" type="VBoxContainer" parent="panel/host/v_box_container"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="label_port" type="Label" parent="panel/host/v_box_container/port"]
layout_mode = 2
text = "Server Port:"

[node name="line_edit_port" type="LineEdit" parent="panel/host/v_box_container/port"]
layout_mode = 2
placeholder_text = "Port (default: 43517)"
max_length = 10
context_menu_enabled = false
emoji_menu_enabled = false

[node name="button_host" type="Button" parent="panel/host/v_box_container"]
layout_mode = 2
text = "Host Server"

[node name="button_back" type="Button" parent="panel/host/v_box_container"]
layout_mode = 2
text = "Back"

[node name="join" type="Control" parent="panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="label_header" type="Label" parent="panel/join"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 128.0
offset_bottom = 195.0
grow_horizontal = 2
theme_type_variation = &"Header"
text = "Network Configuration
- Join Server -"
horizontal_alignment = 1

[node name="v_box_container" type="VBoxContainer" parent="panel/join"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="address" type="VBoxContainer" parent="panel/join/v_box_container"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="label_address" type="Label" parent="panel/join/v_box_container/address"]
layout_mode = 2
text = "Server Address:"

[node name="line_edit_address" type="LineEdit" parent="panel/join/v_box_container/address"]
layout_mode = 2
placeholder_text = "Address"
max_length = 10
context_menu_enabled = false
emoji_menu_enabled = false

[node name="port" type="VBoxContainer" parent="panel/join/v_box_container"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="label_port" type="Label" parent="panel/join/v_box_container/port"]
layout_mode = 2
text = "Server Port:"

[node name="line_edit_port" type="LineEdit" parent="panel/join/v_box_container/port"]
layout_mode = 2
placeholder_text = "Port (default: 43517)"
max_length = 10
context_menu_enabled = false
emoji_menu_enabled = false

[node name="button_join" type="Button" parent="panel/join/v_box_container"]
layout_mode = 2
text = "Join Server"

[node name="button_back" type="Button" parent="panel/join/v_box_container"]
layout_mode = 2
text = "Back"

[node name="status" type="Control" parent="panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="label_header" type="Label" parent="panel/status"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 128.0
offset_bottom = 195.0
grow_horizontal = 2
theme_type_variation = &"Header"
text = "Network Configuration
- Network Status -"
horizontal_alignment = 1

[node name="v_box_container" type="VBoxContainer" parent="panel/status"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.75
offset_top = -101.75
offset_bottom = 101.75
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="button_back" type="Button" parent="panel/status/v_box_container"]
layout_mode = 2
text = "Back"

[node name="label_status" type="Label" parent="panel/status/v_box_container"]
layout_mode = 2
text = "Status"
horizontal_alignment = 1
vertical_alignment = 1
